# node

./: .gitignore  LICENSE  README.md  launch_gui.py  script.py  server.py
.github/workflows/: black.yml
esp32/: hello.py
node/: pyproject.toml
node/node/: app.py  settings.py
node/node/logger/: __init__.py  log.py
node/node/read/: __init__.py  read.py
node/node/transmit/: __init__.py  transmit.py
node/node/ui/: __init__.py  gui.py
node/tests/: test_version.py
pi/: lake_node.py  single_lake_monitor.py  test_system.py  zeromq.py
