[project]
name = "node"
version = "0.1.0"
description = ""
authors = [
    {name = "suvanbanerjee",email = "banerjeesuvan@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pika (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
