[tool.poetry]
name = "node"
version = "0.1.0"
description = ""
authors = ["suvanbanerjee <banerjeesuvan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
pika = ">=1.3.2,<2.0.0"
tk = "^0.1.0"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "node.app:main"
